[package]
name = "netem-trace"
version = "0.3.4"
edition = "2021"
license = "Apache-2.0"
description = "A library for for generating network emulation trace."
readme = "README.md"
homepage = "https://github.com/stack-rs/netem-trace"
repository = "https://github.com/stack-rs/netem-trace"
keywords = ["emulation", "trace", "network", "utility", "model"]
documentation = "https://docs.rs/netem-trace"
categories = ["network-programming", "config", "development-tools", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bandwidth = "0.3.0"
dyn-clone = { version = "1.0.10", optional = true }
itertools = { version = "0.13.0", optional = true }
once_cell = { version = "1.17.0", optional = true }
rand = { version = "0.8.5", optional = true }
rand_distr = { version = "0.4.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
typetag = { version = "0.2.5", optional = true }
humantime-serde = { version = "1.1.1", optional = true }
human-bandwidth = { version = "0.1.1", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["model"]
model = ["bw-model", "delay-model", "loss-model", "duplicate-model"]
bw-model = ["dep:rand", "dep:rand_distr", "dep:once_cell", "dep:dyn-clone"]
delay-model = ["dep:dyn-clone"]
loss-model = ["dep:dyn-clone"]
duplicate-model = ["dep:dyn-clone"]
serde = ["dep:serde", "dep:typetag", "bandwidth/serde"]
mahimahi = ["dep:itertools"]
human = ["serde", "dep:humantime-serde", "dep:human-bandwidth", "human-bandwidth/serde"]
full = ["model", "mahimahi", "human"]

[package.metadata.docs.rs]
all-features = true
